test/functions/resolution/errors/testBadCallCandidates.19-all.good
testBadCallCandidates.chpl:42: In method 'test':
testBadCallCandidates.chpl:50: error: unresolved call 'D.bar("hi")'
testBadCallCandidates.chpl:8: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:50: note: because method call receiver with type 'borrowed D'
testBadCallCandidates.chpl:4: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:50: note: other candidates are:
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
testBadCallCandidates.chpl:36: note:   D.bar(x: int)
testBadCallCandidates.chpl:65: note:   bar(x: D)
